--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,8 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid black;
-  padding: 10px
+  /* border: 1px solid black;
+  padding: 10px; */
+  height: 5vh;
+  float: left;
+  width: 100vw;
+  position: fixed;
 }
 
 .title h1 {
@@ -12,4 +16,8 @@
 
 .auth-link a {
   margin: 10px;
+}
+
+.username {
+  display: flex;
 }
