modify edit page

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   /* border: 1px solid black;
   padding: 10px; */
-  height: 5vh;
+  height: 50px;
   float: left;
   width: 100vw;
   position: fixed;
