--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,6 +10,13 @@
   position: fixed;
 }
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 100%;
+}
+
 .title h1 {
   margin: 0;
 }
