auth screens done

--- a/src/pages/Auth.css
+++ b/src/pages/Auth.css
@@ -4,7 +4,7 @@ html {
 
 .auth-container {
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto 20% auto;
   padding-top: 20%;
   display: flex;
   flex-direction: column;
@@ -44,6 +44,11 @@ html {
   text-align: center;
   color: white;
   font-weight: lighter;
+  padding-top: 0.8rem;
+}
+
+.switch-auth p:nth-child(2n) {
+  padding-top: 43px;
 }
 
 .logo {
@@ -67,4 +72,17 @@ html {
   background-color: rgb(33, 107, 173);
   color: white;
   width: 100%;
+}
+
+.incorrect-message {
+  width: 70%;
+  border-style: solid;
+  border-radius: 5px;
+  border-color: rgb(193, 37, 60);
+  background-color: rgb(243, 142, 157);
+  margin: 0 auto;
+}
+
+.incorrect-message {
+  color: rgb(193, 37, 60);
 }
