--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -15,7 +15,7 @@
 }
 
 .month-input {
-  width: 2rem;
+  width: 3rem;
   text-align: center;
 }
 
@@ -49,4 +49,8 @@
 
 .profile-card-name input {
   width: 50%;
+}
+
+.term-conteiner {
+  display: flex;
 }
