--- a/src/components/CvList.css
+++ b/src/components/CvList.css
@@ -1,5 +1,46 @@
 .cv-list-container {
-  width: 80vw;
+  max-width: 80vw;
   display: flex;
   justify-content: space-between;
+  margin: 2rem auto;
+  padding: 1.5rem 2rem;
+  -webkit-box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75);
+  box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75); 
+}
+
+.cv-list-container:last-child {
+  margin-bottom: 2rem;
+  background-color: white;
+}
+
+.cv-list-btn {
+  margin-top: 6px;
+}
+
+.edit-btn-cvlist {
+  margin: 0 1rem;
+  background-color: white;
+  border-radius: 3px;
+}
+
+.edit-btn-cvlist i {
+  color: rgb(187, 190, 193);
+}
+
+.edit-btn-cvlist i:hover {
+  color: rgb(105, 234, 109);
+}
+
+.delete-btn-cvlist {
+  background-color: white;
+  border-radius: 3px;
+}
+
+.delete-btn-cvlist i {
+  color: rgb(187, 190, 193);
+}
+
+.delete-btn-cvlist i:hover {
+  color: rgb(250, 80, 80);
 }
