--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,15 +10,30 @@
   position: fixed;
 }
 
-.navbar {
+.navbar-css {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   width: 100%;
+  position: sticky;
+  /* margin: 0; */
+  background-color: rgb(52, 68, 81);
+  top: 0;
+  padding: 2% 0;
+}
+
+.navbar-hidden {
+  display: none;
+}
+
+.title {
+  padding-top: 4px;
 }
 
 .title h1 {
+  color: white;
   margin: 0;
+  padding-left: 2rem;
 }
 
 .auth-link a {
@@ -27,4 +42,11 @@
 
 .username {
   display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+}
+
+.username p {
+  color: white;
+  margin: 1rem;
 }
