--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,12 @@
 .home-container {
   margin-top: 50px;
+  background-color: white;
+  margin: 0 auto;
+  height: 100vh;
 }
 
 .cv-Preview-container ul {
   list-style-type: none;
+  padding-left: 0;
+  background-color: white;
 }
