--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,6 +5,28 @@
   height: 100vh;
 }
 
+.add-btn {
+  background-color: rgb(33, 107, 173);
+  position: fixed;
+  border-radius: 32px;
+  height: 4rem;
+  width: 4rem;
+  right: 2rem;
+  bottom: 2rem;
+  z-index: 3;
+  -webkit-box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75);
+  box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75); 
+}
+
+/* .home-container i::before {
+  background-color: rgb(33, 107, 173);
+} */
+
+.add-btn i {
+  color: white;
+}
+
 .cv-Preview-container ul {
   list-style-type: none;
   padding-left: 0;
