create education component

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -53,12 +53,11 @@
   display: flex;
 }
 
-.work-item-conteiner {
+.content-item-conteiner {
   padding: 1rem;
   border: 1px solid lightgray;
   /* background-color: white; */
   -webkit-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
   box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
-  
 }
