--- a/src/components/CV/CV.css
+++ b/src/components/CV/CV.css
@@ -5,8 +5,8 @@
   display: flex;
   justify-content: center;
   overflow: scroll;
-  flex-direction:column;
-  align-items: center;
+  /* flex-direction:column;
+  align-items: center; */
 }
 
 .cv-view {
