--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -28,12 +28,38 @@
   height: 30px;
 }
 
-.profile-card input {
+.edit-profile-card {
+  align-items: center;
+  display: flex;
+  height: 30px;
+  margin-bottom: 1rem;
+}
+
+.edit-profile-card-textarea {
+  margin-bottom: 2rem;
+}
+
+.width-full {
   width: 100%;
 }
 
+.width-half {
+  width: 49%;
+}
+
+.edit-profile-card input, textarea {
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 0 0.5rem;
+}
+
 .profile-card i {
-  margin-right: 1rem;
+  margin-right: 20px;
+  width: 20px;
+}
+
+.edit-profile-card i {
+  margin-right: 20px;
   width: 20px;
 }
 
@@ -41,13 +67,15 @@
   margin-right: 1rem;
 }
 
-.profile-card-name {
-  width: 100%;
+.headline-card {
+  margin-left: 40px;
 }
 
-.profile-card-name input {
-  width: 50%;
+.edit-profile-card-name {
+  display: flex;
+  justify-content: space-between;
 }
+
 
 .term-conteiner {
   display: flex;
