--- a/src/components/CV/CV.css
+++ b/src/components/CV/CV.css
@@ -77,3 +77,19 @@ page[size="A5"][layout="landscape"] {
 .cv-profile-card {
   width: 50%;
 }
+
+.cv-skill-card, .cv-interest-card {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  width: 50%;
+}
+
+.text-skill {
+  color: white;
+  margin: 2px;
+  padding: 1px 2px;
+  background-color: rgb(33, 107, 173);
+  border-radius: 2px;
+}
+
