--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -28,6 +28,10 @@
   height: 30px;
 }
 
+.profile-headline-container {
+  margin-left: 40px;
+}
+
 .edit-profile-card {
   align-items: center;
   display: flex;
