--- a/src/components/CV/CV.css
+++ b/src/components/CV/CV.css
@@ -16,7 +16,7 @@
   height: 842px; */
   border: 1px solid black;
   background-color: white;
-  margin-top: 10px
+  margin-top: 10px;
 }
 
 /* page {
@@ -91,7 +91,7 @@ page[size="A5"][layout="landscape"] {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  width: 40%;
+  /* width: 40%; */
 }
 
 .text-skill {
@@ -116,6 +116,9 @@ page[size="A5"][layout="landscape"] {
 }
 
 .cv-text-view {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
   padding: 1.5rem 2rem;
   border-right-style: solid;
   border-right-color: rgb(227, 227, 227);
@@ -154,5 +157,10 @@ page[size="A5"][layout="landscape"] {
 
 .secondary {
   border-right-style: solid;
+}
+
+.primary {
+  width: 100%;
+  padding-left: 1.5rem;
 }
 
