--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -9,7 +9,10 @@
 .title-container p {
 }
 
-.content-container input {
+.input-style {
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 0 0.5rem;
 }
 
 .month-input {
@@ -81,17 +84,27 @@
 }
 
 
-.term-conteiner {
+.term-container {
   display: flex;
 }
 
-.content-item-conteiner {
-  padding: 1rem;
-  border: 1px solid lightgray;
-  /* background-color: white; */
-  -webkit-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
-  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
+.term-icon {
+  margin: 0 1rem;
+}
+
+.content-item-container h5 {
+  /* font-size: 1rem; */
+  text-decoration-line: underline;
+}
+
+.content-item-container input, textarea {
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 0 0.5rem;
+}
+
+.edit-content-item-conteiner {
+  margin-bottom: 1rem;
 }
 
 .list-item-container {
@@ -104,11 +117,13 @@
   justify-content: space-between;
 }
 
-.add-profile-btn, .save-profile-btn {
-  margin-top: 5rem;
+.edit-profile-btn, .save-profile-btn {
+  margin-top: 2rem;
 }
 
-.add-profile-btn button, .save-profile-btn button {
+.edit-profile-btn button,
+.save-profile-btn button ,
+.add-profile-btn button {
   color: white;
   margin: 0 45%;
   width: 5rem;
@@ -116,7 +131,9 @@
   border-radius: 5px;
 }
 
-.add-profile-btn button:hover, .save-profile-btn button:hover {
+.edit-profile-btn button:hover,
+.save-profile-btn button:hover,
+.add-profile-btn button:hover {
   color: black;
   background-color: rgb(227, 227, 227);
 }
@@ -134,7 +151,21 @@
   background-color: rgb(227, 227, 227);
 }
 
-.content-item-conteiner {
+.add-profile-btn button {
+  color: white;
+  margin: 0 45%;
+  width: 5rem;
+  background-color: rgb(33, 107, 173);
+  border-radius: 5px;
+}
+
+.add-profile-btn button:hover {
+  color: black;
+  background-color: rgb(227, 227, 227);
+}
+
+.content-item-container {
+  border: 1px solid lightgray;
   max-width: 90vw;
   margin: 1rem 1rem;
   padding: 1.5rem 2rem;
