--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -174,6 +174,11 @@
   box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75);
 }
 
+.content-btns {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .work-container {
   margin-bottom: 1.5rem;
 }
