--- a/src/components/CV/CV.css
+++ b/src/components/CV/CV.css
@@ -159,9 +159,10 @@ page[size="A5"][layout="landscape"] {
   border-right-style: solid;
   border-width: 1px;
   width: 300px;
+  padding-right: 1rem;
 }
 
 .primary {
   width: 100%;
-  padding-left: 1.5rem;
+  padding-left: 1rem;
 }
