square picture uploaded

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -35,12 +35,21 @@
 .edit-profile-card {
   align-items: center;
   display: flex;
-  height: 30px;
+  /* height: 30px; */
   margin-bottom: 1rem;
 }
 
+.edit-profile-title {
+  height: 100%;
+  width: 100%;
+}
+
+.edit-profile-title i {
+  padding-bottom: 141px;
+}
+
 .edit-profile-card-textarea {
-  margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 
 .width-full {
@@ -71,19 +80,19 @@
   margin-right: 1rem;
 }
 
-.headline-card {
+/* .headline-card {
   margin-left: 40px;
-}
+} */
 
 .edit-profile-card-name {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  width: 70%;
 }
 
 .edit-name-card {
   width: 100%;
-  height: 100px;
 }
 
 .term-container {
@@ -243,7 +252,7 @@
 }
 
 .edit-profile-choose {
-  /* border-radius: 5px; */
+  border-radius: 50px;
   text-align: center;
   color: transparent;
   position: relative;
@@ -271,7 +280,7 @@
 
 .edit-profile-empty {
   width: 100px;
-  height: 100px;
+  height: 100px;    
 }
 
 .edit-profile-empty:hover {
@@ -279,6 +288,12 @@
   color: white;
   padding-top: 33px;
   font-size: 25px;
+
+  /* font-weight: bold; */
+  text-shadow: 2px 2px 1px black,
+  -2px 2px 1px black,
+  2px -2px 1px black,
+  -2px -2px 1px black;
 }
 
 .picture-name-container {
@@ -288,5 +303,5 @@
 }
 
 .name-set {
-  margin: 0 1rem 0;
+  /* margin: 0 1rem 0; */
 }
