--- a/src/components/CV/CV.css
+++ b/src/components/CV/CV.css
@@ -15,9 +15,10 @@
 .cv-view {
   width: 21cm;
   height: 29.7cm;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background-color: white;
   margin-top: 10px;
+  box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.3);
 }
 
 @media print {
@@ -89,8 +90,8 @@
   justify-content: space-between;
   flex-direction: row;
   padding: 1.5rem 2rem;
-  border-right-style: solid;
-  border-right-color: rgb(227, 227, 227);
+  /* border-right-style: solid;
+  border-right-color: rgb(227, 227, 227); */
 }
 
 .hard-container, .soft-container, .languages-container, .interests-container {
@@ -134,4 +135,9 @@
 .primary {
   width: 100%;
   padding-left: 1rem;
+}
+
+.date-city {
+  display: flex;
+  justify-content: space-between;
 }
