--- a/src/components/Edit.css
+++ b/src/components/Edit.css
@@ -9,3 +9,9 @@
   overflow: scroll;
   height: 90%;
 }
+
+.edit-content-container button{
+  color: transparent;
+  background-color: transparent;
+  border-color: transparent;
+}
