--- a/src/components/Edit.css
+++ b/src/components/Edit.css
@@ -10,7 +10,7 @@
   height: 90%;
 }
 
-.edit-content-container button{
+.pdf-change-btn {
   color: transparent;
   background-color: transparent;
   border-color: transparent;
