--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,11 +1,12 @@
 $blueBtnColor: rgb(33, 107, 173);
 $navColor: rgb(52, 68, 81);
 $errMsgColor: rgb(193, 37, 60);
+$hoverColor: rgb(227, 227, 227);
 
 * {
-  // margin: 0;
-  // padding: 0;
-  // box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 @mixin flexbox($justify-content) {
@@ -20,9 +21,16 @@ $errMsgColor: rgb(193, 37, 60);
   border-radius: 5px;
   &:hover {
     color: black;
-    background-color: rgb(227, 227, 227);
+    background-color: $hoverColor;
   }
 }
+@mixin cvTextList() {
+  margin: 2px 3px;
+  padding: 1px 5px;
+  border-radius: 0.25rem;
+  font-size: 0.75rem;
+}
+
 
 body {
   margin: 0px;
@@ -35,19 +43,17 @@ body {
 }
 
 .auth-container {
+  background-color: $navColor;
   width: 100%;
   height: 100vh;
   margin: 0 auto 20% auto;
   padding-top: 6%;
   display: flex;
   flex-direction: column;
-  background-color: $navColor;
 }
 
 .border-auth-container {
-  border-style: solid;
-  border-width: 2px;
-  border-color: rgb(162, 174, 184);
+  border: 2px solid $hoverColor;
   border-radius: 7px;
   margin: 0 30%;
 }
@@ -182,7 +188,7 @@ body {
   flex-direction: row;
   width: 100%;
   position: sticky;
-  background-color: rgb(52, 68, 81);
+  background-color: $navColor;
   top: 0;
   padding: 5px 0;
 }
@@ -208,7 +214,6 @@ body {
   }
 }
 
-
 .title-link {
   text-decoration: none;
 }
@@ -217,9 +222,8 @@ body {
   margin: 10px;
 }
 
-.username {
-  display: flex;
-  justify-content: space-around;
+.nav-username {
+  @include flexbox(space-around);
   flex-direction: row;
   p {
     color: white;
@@ -251,14 +255,11 @@ body {
   justify-content: space-between;
   margin: 2rem auto;
   padding: 1.5rem 2rem;
-  -webkit-box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75);
   box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75);
-}
-
-.cv-list-container:last-child {
-  margin-bottom: 2rem;
-  background-color: white;
+  &:last-child {
+    margin-bottom: 2rem;
+    background-color: white;
+  }
 }
 
 .cv-list-btns {
@@ -290,16 +291,6 @@ body {
   border-radius: 5px;
   font-size: 1.4rem;
   padding-left: 0.7rem;
-}
-
-
-.tab-container {
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  button {
-    background-color: transparent;
-    border: none;
-  }
 }
 
 .tabs-container {
@@ -334,6 +325,10 @@ body {
   align-items: center;
   display: flex;
   height: 30px;
+  i {
+    margin-right: 20px;
+    width: 20px;
+  }
 }
 
 .profile-headline-container {
@@ -344,6 +339,15 @@ body {
   align-items: center;
   display: flex;
   margin-bottom: 1rem;
+  i {
+    margin-right: 20px;
+    width: 20px;
+  }
+  input, textarea {
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 0 0.5rem;
+  }
 }
 
 .edit-profile-title {
@@ -367,22 +371,6 @@ body {
   width: 49%;
 }
 
-.edit-profile-card input, textarea {
-  border: 1px solid gray;
-  border-radius: 5px;
-  padding: 0 0.5rem;
-}
-
-.profile-card i {
-  margin-right: 20px;
-  width: 20px;
-}
-
-.edit-profile-card i {
-  margin-right: 20px;
-  width: 20px;
-}
-
 .content-text-container {
   margin-right: 1rem;
 }
@@ -394,35 +382,12 @@ body {
   width: 70%;
 }
 
-.edit-name-card {
-  width: 100%;
-}
-
 .term-container {
   display: flex;
 }
 
 .term-icon {
   margin: 0 1rem;
-}
-
-.content-item-container h5 {
-  text-decoration-line: underline;
-}
-
-.content-item-container h6 {
-  font-size: 1.2rem;
-  font-weight: 900;
-}
-
-.content-item-container input, textarea {
-  border: 1px solid gray;
-  border-radius: 5px;
-  padding: 0 0.5rem;
-}
-
-.content-item-container textarea {
-  resize: none;
 }
 
 .edit-content-item-conteiner {
@@ -435,7 +400,8 @@ body {
 }
 
 .list-item-container {
-  @include flexbox(space-between);
+  display: flex;
+  justify-content: space-between;
 }
 
 .list-item-word {
@@ -448,34 +414,23 @@ body {
   margin-bottom: 0.7rem;
 }
 
-.edit-profile-btn, .save-profile-btn {
+.edit-profile-btn,
+.save-profile-btn {
   margin-top: 2rem;
 }
 
-
-.using-btn,
-.ed-btn,
-.del-btn,
-.save-btn {
-  margin-right: 1rem;
-  width: 5rem;
+.blue-btn {
   @include blueBtn();
+  width: 5rem;
+  margin: 0 0.5rem;
 }
+
+.btn-container {
+  @include flexbox(center);
+}
+
 .arrow-btn {
   margin-right: 0.5rem;
-  @include blueBtn();
-}
-
-.edit-profile-btn button,
-.save-profile-btn button,
-.add-profile-btn button {
-  @include blueBtn();
-  width: 5rem;
-  margin: 0 45%;
-}
-
-.edit-list-btn {
-  width: 5rem;
   @include blueBtn();
 }
 
@@ -485,6 +440,19 @@ body {
   margin: 1rem 1rem;
   padding: 1.5rem 2rem;
   box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75);
+  h5 {
+    text-decoration-line: underline;
+  }
+  h6 {
+    font-size: 1.2rem;
+    font-weight: 900;
+  }
+  input, textarea {
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 0 0.5rem;
+    resize: none;
+  }
 }
 
 .content-btns {
@@ -492,30 +460,26 @@ body {
   justify-content: flex-end;
 }
 
-.work-container {
+.work-cv-container {
   margin-bottom: 1.5rem;
-}
-
-.work-title {
-  font-size: 1.3rem;
-  font-weight: bold;
-}
-
-.work-company {
-  font-style: italic;
-}
-
-.work-text {
-  font-size: 0.8rem;
+  .work-title {
+    font-size: 1.3rem;
+    font-weight: bold;
+  }
+  .work-company {
+    font-style: italic;
+  }
+  .work-text {
+    font-size: 0.8rem;
+  }
 }
 
 .edit-profile-img {
   width: 70px;
   height: 70px;
-}
-
-.edit-profile-img img {
-  height: 100%;
+  img {
+    height: 100%;
+  }
 }
 
 .edit-profile-choose {
@@ -524,6 +488,13 @@ body {
   color: transparent;
   position: relative;
   margin: 0;
+  input {
+    display: none;
+  }
+  &:hover {
+    color: white;
+    margin: 0;
+  }
 }
 
 .edit-text {
@@ -533,35 +504,25 @@ body {
   text-align: center;
 }
 
-.edit-profile-choose:hover {
-  color: white;
-  margin: 0;
-}
-
-.edit-profile-choose input {
-  display: none;
-}
-
 .edit-profile-empty {
   width: 100px;
   height: 100px;
-}
-
-.edit-profile-empty:hover {
-  filter: brightness(100%);
-  color: white;
-  padding-top: 33px;
-  font-size: 25px;
-  text-shadow: 2px 2px 1px black,
-  -2px 2px 1px black,
-  2px -2px 1px black,
-  -2px -2px 1px black;
+  &:hover {
+    filter: brightness(100%);
+    color: white;
+    padding-top: 33px;
+    font-size: 25px;
+    text-shadow: 2px 2px 1px black,
+    -2px 2px 1px black,
+    2px -2px 1px black,
+    -2px -2px 1px black;
+  }
 }
 
 .picture-name-container {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  flex-direction: row;
 }
 
 .cv-component-container {
@@ -572,10 +533,9 @@ body {
   justify-content: center;
   overflow: scroll;
   overflow-y: scroll;
-}
-
-.cv-component-container iframe {
-  width: 100%;
+  iframe {
+    width: 100%;
+  }
 }
 
 .cv-view {
@@ -601,23 +561,21 @@ body {
 .cv-title-article {
   padding: 1.5rem 2rem 0 2rem;
   display: flex;
-}
-
-.cv-title-article img {
-  height: 100px;
+  img {
+    height: 100px;
+  }
 }
 
 .cv-profile-article {
   padding: 1rem 2rem 1rem 2rem;
-  background-color: rgb(227, 227, 227);
+  background-color: $hoverColor;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-}
-
-.cv-profile-article i {
-  margin-right: 1.3rem;
-  width: 5px;
+  i {
+    margin-right: 1.3rem;
+    width: 5px;
+  }
 }
 
 .cv-profile-card {
@@ -632,18 +590,14 @@ body {
 
 .text-skill {
   color: white;
-  margin: 2px 3px;
-  padding: 1px 5px;
-  background-color: rgb(33, 107, 173);
-  border-radius: 0.5rem;
+  background-color: $blueBtnColor;
+  @include cvTextList();
 }
 
 .text-interest {
   color: black;
-  margin: 2px 3px;
-  padding: 1px 5px;
-  border-radius: 0.5rem;
-  background-color: rgb(227, 227, 227);
+  background-color: $hoverColor;
+  @include cvTextList();
 }
 
 .cv-body-title {
@@ -673,7 +627,7 @@ body {
 }
 
 .print-btn {
-  background-color: rgb(33, 107, 173);
+  background-color: $blueBtnColor;
   position: fixed;
   border-radius: 10px;
   height: 4rem;
@@ -682,12 +636,11 @@ body {
   top: 7rem;
   z-index: 3;
   box-shadow: 4px 4px 26px 0px rgba(0,0,0,0.75);
-}
-
-.print-btn p {
-  color: white;
-  font-size: 1.5rem;
-  margin: 0 auto;
+  p {
+    color: white;
+    font-size: 1.5rem;
+    margin: 0 auto;
+  }
 }
 
 .secondary {
@@ -703,6 +656,5 @@ body {
 }
 
 .date-city {
-  display: flex;
-  justify-content: space-between;
+  @include flexbox(space-between);
 }
